alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -79,9 +79,11 @@ ol {
 }
 
 .section-title h2 {
+	font-size: 72px;
 	display: inline-block;
 	position: relative;
 	margin-bottom: 110px;
+	margin-left: 0px;
 	padding-bottom: 2px;
 	line-height: normal;
 }
@@ -380,11 +382,15 @@ ol {
 }
 
 .site-logo h2 {
+	margin: 25px auto 25px 35px;
+	font-family: "Comic Sans MS", cursive, sans-serif; 
 	font-size: 36px;
+	font-weight: 500;
+	text-align: center;
 }
 
 .site-logo h2 a {
-	color: #40424a;
+	color: #fff;
 }
 
 .site-logo p {
@@ -535,7 +541,7 @@ ol {
 	background-size: cover;
 	border: 1px solid;
 	box-shadow: 15px 15px 7.5px #000;
-	margin: 50px 150px;
+	margin: 50px 50px;
 }
 
 .resume-list {
@@ -611,11 +617,17 @@ ol {
 	margin-bottom: 15px;
 }
 
-.review-slider .owl-dots .owl-dot.active {
+.review-slide	r .owl-dots .owl-dot.active {
 	background: #40424a;
 }
 
-.single-review .qut {
+.single-review {
+	background-image: url("../img/paper-bg.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	padding: 50px;
+}
+.single-review .qut {	
 	font-size: 120px;
 	line-height: 0;
 	color: #505259;
